<resources>
    <string name="app_name">NomNomNow</string>
     <string name="recipe_title_label">Title</string>
    <string name="recipe_ingredients_label">Ingredients</string>
    <string name="recipe_favorite_label">Favorite</string>
    <string name="recipe_timetomake_label">Time To Make</string>
    <string name="recipe_instructions_label">Instructions</string>
    <string name="recipe_difficulty_label">Difficulty</string>
    <string name="show_subtitle">Show Subtitle</string>
    <string name="hide_subtitle">Hide Subtitle</string>
    <string name="subtitle_format">%1$d recipes</string>
    <string name="there_are_currently_no_recipes">There are currently no recipes.</string>
    <string name="add_recipe">Add Recipe</string>
    <string name="new_recipe">New Recipe</string>
    <string name="delete_recipe">Delete Recipe</string>
    <string name="generate_recipes">Generate Recipes</string>
    <string name="clear_recipes">Clear Recipes</string>
    <string name="clear_recipes_string">Clear Recipes</string>
    <string name="difficulty">difficulty</string>
    <string name="enter_step">Enter step</string>


</resources>