<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_margin="16dp"
    >
    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/recipe_title_label"/>

    <EditText
        android:id="@+id/recipe_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/recipe_ingredients_label"/>

    <EditText
        android:id="@+id/recipe_ingredients"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/recipe_timetomake_label"/>

    <EditText
        android:id="@+id/recipe_timetomake"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/recipe_instructions_label"/>

    <EditText
        android:id="@+id/recipe_instructions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RatingBar
        android:id="@+id/recipe_difficulty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numStars="5"
        android:stepSize="1"
        android:rating="3"
        android:isIndicator="false"/>

    <CheckBox
        android:id="@+id/recipe_favorite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/recipe_favorite_label"/>

</LinearLayout>